<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context="com.example.android.helloandroid.MainActivity">

    <!--Top section Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal">

        <!--Left side of top section-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/compName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/titleStyle"
                android:gravity="center"

                android:text="@string/compName"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginAround"
                android:fontFamily="@string/bodyStyle"
                android:forceHasOverlappingRendering="false"
                android:gravity="center_horizontal"
                android:text="@string/message"
                android:textColor="#ffffff"
                android:textSize="@dimen/bodySize" />

        </LinearLayout>

        <!--Right section of top section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/dogDiscription"
                android:scaleType="centerCrop"
                android:src="@drawable/dog" />

        </LinearLayout>
    </LinearLayout>

    <!--Middle section layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Left side of middle section-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginAround"
                android:fontFamily="@string/titleStyle"
                android:text="Contact Us:"
                android:textSize="@dimen/titleSize" />

        </LinearLayout>

        <!--Right side of middle section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <!--1st Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <!--TODO: move contentDescription to dimensions-->

                <ImageView
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:contentDescription="@string/worldIcon"
                    android:src="@drawable/world_icon" />

                <!--TODO: move marginLeft to dimensions-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:autoLink="web"
                    android:fontFamily="@string/bodyStyle"
                    android:text="@string/website"
                    android:textSize="@dimen/bodySize" />

            </LinearLayout>

            <!--2nd row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <!--TODO: move contentDescription to dimensions-->
                <!--TODO: move width & height to dimensions-->
                <ImageView
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:contentDescription="@string/phoneIcon"
                    android:src="@drawable/phone_icon" />

                <!--TODO: move marginLeft to dimensions-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:autoLink="phone"
                    android:fontFamily="@string/bodyStyle"
                    android:text="@string/phone"
                    android:textSize="@dimen/bodySize" />
            </LinearLayout>

            <!--3rd row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Address"
                    android:src="@drawable/location_icon" />

                <!--TODO: move marginLeft to dimensions-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:autoLink="map"
                    android:fontFamily="@string/bodyStyle"
                    android:text="@string/address"
                    android:textSize="@dimen/bodySize" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/udacityDiscription"
        android:scaleType="centerCrop"
        android:src="@drawable/udacity" />

</LinearLayout>
